# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

MQTT_ROOT_DIR = "//third_party"
MQTT_DIR = "$MQTT_ROOT_DIR/huawei-iot/generatingLib/paho.mqtt.c-1.3.9"

SRC_PATH = "$MQTT_DIR/src"
ohos_shared_library("pahomqttas") {

  include_dirs = [
    "//third_party/openssl/include/openssl",
  ]

  sources = [
    "$SRC_PATH/Base64.c",
    "$SRC_PATH/Clients.c",
    "$SRC_PATH/Heap.c",
    "$SRC_PATH/LinkedList.c",
    "$SRC_PATH/Log.c",
    "$SRC_PATH/Messages.c",
    "$SRC_PATH/MQTTAsync.c",
    "$SRC_PATH/MQTTAsyncUtils.c",
    "$SRC_PATH/MQTTPacket.c",
    "$SRC_PATH/MQTTPacketOut.c",
    "$SRC_PATH/MQTTPersistence.c",
    "$SRC_PATH/MQTTPersistenceDefault.c",
    "$SRC_PATH/MQTTProperties.c",
    "$SRC_PATH/MQTTProtocolClient.c",
    "$SRC_PATH/MQTTProtocolOut.c",
    "$SRC_PATH/MQTTReasonCodes.c",
    "$SRC_PATH/MQTTTime.c",
    "$SRC_PATH/OsWrapper.c",
    "$SRC_PATH/SHA1.c",
    "$SRC_PATH/Socket.c",
    "$SRC_PATH/SocketBuffer.c",
    "$SRC_PATH/SSLSocket.c",
    "$SRC_PATH/StackTrace.c",
    "$SRC_PATH/Thread.c",
    "$SRC_PATH/Tree.c",
    "$SRC_PATH/utf-8.c",
    "$SRC_PATH/WebSocket.c",
  ]

  cflags = [
    "-fPIC",
    "-D_GNU_SOURCE",
    "-Os",
    "-Wall",
    "-fvisibility=hidden",
    "-DPAHO_MQTT_EXPORTS=1",
    "-DOPENSSL",
  ]

  deps = [
    "//third_party/openssl:libssl_shared",
    "//third_party/openssl:libcrypto_shared"
  ]
  install_enable = true
  part_name = "netstack"
  subsystem_name = "communication"
}

