# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/msdp/device_status/device_status.gni")

config("coordination_device_public_config") {
  include_dirs = [ "include" ]
  }

ohos_shared_library("msdp_device_manager") {
  include_dirs = [
    "${device_status_service_path}/context/include",
    "${device_status_service_path}/interaction/coordination/include/",
  ]

  sources = [
    "src/device.cpp",
    "src/device_manager.cpp",
    "src/enumerator.cpp",
    "src/monitor.cpp",
  ]

  public_configs = [ ":coordination_device_public_config" ]

  defines = device_status_default_defines

  deps = [
    "${device_status_interfaces_path}/innerkits:devicestatus_client",
    "${device_status_root_path}/utils/ipc:devicestatus_ipc",
    "${device_status_utils_path}:devicestatus_util",
    "//third_party/openssl:libcrypto_shared",
  ]

  external_deps = [
    "hilog:libhilog",
    "c_utils:utils"
  ]

  subsystem_name = "msdp"
  part_name = "${device_status_part_name}"
}