# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/msdp/device_status/device_status.gni")

config("lib_distributedinput_config") {
  include_dirs =
      [ "//base/msdp/device_status/services/distributed_input/include" ]
}

ohos_shared_library("lib_distributedinput") {
  include_dirs = [ "include" ]

  public_configs = [ ":lib_distributedinput_config" ]

  subsystem_name = "msdp"
  part_name = "${device_status_part_name}"
}
