# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//base/msdp/device_status/device_status.gni")

ohos_rust_shared_library("base_event_sys") {
  sources = [
    "src/binding.rs",
    "src/cextra_data.rs",
    "src/error.rs",
    "src/interaction/mod.rs",
    "src/lib.rs",
  ]

  deps = [
    "//base/msdp/device_status/rust/base_event/binding:base_event_c",
    "//base/hiviewdfx/hilog/interfaces/rust:hilog_rust",
  ]

  crate_name = "base_event_sys"
  crate_type = "dylib"

  subsystem_name = "msdp"
  part_name = "${device_status_part_name}"
}
