# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//base/msdp/device_status/device_status.gni")

ohos_shared_library("base_event_c") {
  include_dirs = [
    "include",
  ]

  configs = [
    "${device_status_utils_path}:devicestatus_utils_config",
  ]

  sources = [
    "//base/msdp/device_status/rust/base_event/sys/source/c_base_event.cpp",
  ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "input:libmmi-client",
    "multimedia_image_framework:image_native",
  ]

  output_extension = "so"
  install_images = [ system_base_dir ]
  subsystem_name = "msdp"
  part_name = "${device_status_part_name}"
}