# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/msdp/device_status/device_status.gni")
import("//build/ohos.gni")

ohos_rust_shared_ffi("devicestatus_rust_util_ffi") {
  sources = [ "src/lib.rs" ]

  external_deps = [
    "c_utils:utils",
    "hiviewdfx_hilog_native:hilog_rust",
    "hiviewdfx_hilog_native:libhilog",
  ]

  crate_name = "devicestatus_rust_util_ffi"
  crate_type = "cdylib"
  install_images = [ system_base_dir ]
  subsystem_name = "msdp"
  part_name = "${device_status_part_name}"
}

ohos_rust_shared_library("devicestatus_rust_util") {
  sources = [ "src/lib.rs" ]

  external_deps = [
    "c_utils:utils",
    "hiviewdfx_hilog_native:hilog_rust",
    "hiviewdfx_hilog_native:libhilog",
  ]

  crate_name = "devicestatus_rust_util"
  crate_type = "dylib"
  install_images = [ system_base_dir ]
  subsystem_name = "msdp"
  part_name = "${device_status_part_name}"
}

ohos_executable("test_rust_pkt") {
  sources = [ "test/main.rs" ]
  deps = [
    ":devicestatus_rust_util",
    "${device_status_utils_path}:devicestatus_util",
  ]
}
