# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/msdp/device_status/device_status.gni")

config("across_communication_private_config") {
  include_dirs = [ "include" ]
}

ohos_shared_library("continue_mission_callback") {
  include_dirs = [
    "${device_status_interfaces_path}/innerkits/interaction/include",
    "${device_status_service_path}/context/include",
    "${device_status_utils_path}/include",
    "//foundation/ability/dmsfwk/services/dtbschedmgr/include",
  ]

  sources = [
    "src/continue_mission_callback.cpp",
    ]

  configs = [ ":across_communication_private_config" ]

  defines = device_status_default_defines

  deps = [
    "${device_status_utils_path}:devicestatus_util",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:ability_manager",
    "dmsfwk:common_sdk",
    "dmsfwk:continuation_manager",
    "dmsfwk:distributedschedsvr",
    "c_utils:utils",
    "hitrace_native:hitrace_meter",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_single",
  ]

  subsystem_name = "msdp"
  part_name = "${device_status_part_name}"
}
