# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/msdp/device_status/device_status.gni")
import("//build/config/features.gni")
import("//build/test.gni")

module_output_path = "device_status/device_status_native"

deps_ex = [
  "c_utils:utils",
  "hiviewdfx_hilog_native:libhilog",
  "ipc:ipc_core",
]

ohos_fuzztest("DeviceStatusEventFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file =
      "//base/msdp/device_status/test/fuzztest/devicestatusevent_fuzzer"

  include_dirs = [
    "./",
    "${device_status_interfaces_path}/innerkits/include",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [ "./devicestatusevent_fuzzer.cpp" ]
  deps = [
    "${device_status_frameworks_path}/js/napi:devicestatus",
    "//foundation/arkui/napi:ace_napi",
  ]

  external_deps = deps_ex
}

group("fuzztest") {
  testonly = true
  deps = []

  deps += [ ":DeviceStatusEventFuzzTest" ]
}
