# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/msdp/device_status/device_status.gni")
##import("//build/test.gni")

##module_output_path = "${device_status_part_name}/unit_out"
##ohos_rust_unittest("rust_dinput_test") {
##  module_out_path = module_output_path
##  sources = [ "src/main.rs" ]
##  deps = [
##    "${device_status_root_path}/rust/subsystem/dinput/sys:fusion_dinput_rust",
##    "${device_status_root_path}/rust/utils:fusion_utils_rust",
##    ]
##  external_deps = [ "hilog:hilog_rust" ]
##  subsystem_name = "${device_status_subsystem_name}"
##  part_name = "${device_status_part_name}"
##}


ohos_rust_executable("fusion_dinput_exe") {
  sources = [ "src/main.rs" ]
  deps = [
    "${device_status_root_path}/rust/subsystem/dinput/sys:fusion_dinput_rust",
    "${device_status_root_path}/rust/utils:fusion_utils_rust",
  ]
  external_deps = [ "hilog:hilog_rust" ]
  subsystem_name = "${device_status_subsystem_name}"
  part_name = "${device_status_part_name}"
}

ohos_executable("fusion_dinput_binding_exe") {
  
  include_dirs = [ "//third_party/cJSON" ]
  sources = [ "src/main.cpp" ]

  deps = [
    "${device_status_root_path}/utils/common:devicestatus_util",
    "${device_status_root_path}/utils/ipc:devicestatus_ipc",
    "${device_status_service_path}/interaction/coordination:coordination"
  ]

  external_deps = [
    "c_utils:utils",
    "distributed_input:libdinput_sdk",
    "hilog:libhilog",
    "ipc:ipc_single",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
  ]

  install_enable = true
  subsystem_name = "${device_status_subsystem_name}"
  part_name = "${device_status_part_name}"
}
