# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//base/msdp/device_status/device_status.gni")

config("fusion_distributed_input_config") {
  include_dirs = [
    "include",
    "${device_status_interfaces_path}/innerkits/interaction/include",
  ]

  defines = device_status_default_defines
}

config("fusion_distributed_input_public_config") {
  include_dirs = [ "include" ]
}

ohos_shared_library("fusion_distributed_input") {
  sources = [
    "src/fusion_distributed_input_adapter.cpp",
  ]

  configs = [ ":fusion_distributed_input_config" ]

  public_configs = [ ":fusion_distributed_input_public_config" ]

  deps = [
    "${device_status_root_path}/utils/common:devicestatus_util",
  ]

  if (fusion_interaction_coordination) {
    deps += [ "${device_status_root_path}/services/interaction/coordination:coordination" ]
  }

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "distributed_input:libdinput_sdk",
    "input:libmmi-client",
    "multimedia_image_framework:image_native",
  ]

  subsystem_name = "${device_status_subsystem_name}"
  part_name = "${device_status_part_name}"
}