# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("../../../../device_status.gni")

module_output_path = "${device_status_part_name}/devicestatussrv"

config("devicestatus_private_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "include",
    "../../include"
  ]
}

ohos_unittest("vdevadm_test") {
  module_out_path = module_output_path

  sources = [ "vdevadm_test.cpp" ]

  configs = [
    "${device_status_utils_path}:devicestatus_utils_config",
    ":devicestatus_private_config",
  ]

  deps = [
    "${device_status_interfaces_path}/innerkits:devicestatus_client",
    "${device_status_root_path}/services:devicestatus_static_service",
    "//third_party/googletest:gtest_main",
    "//third_party/jsoncpp",
    "../../:devicestatus_vdev_builders",
    "${device_status_utils_path}:devicestatus_util",
  ]

  external_deps = [
    "ability_base:base",
    "access_token:libaccesstoken_sdk",
    "c_utils:utils",
    "hilog:libhilog",
    "image_framework:image_native",
    "input:libmmi-client",
    "ipc:ipc_single",
    "safwk:system_ability_fwk",
  ]
}

group("unittest") {
  testonly = true
  deps = []

  deps += [
    ":vdevadm_test",
  ]
}
